disable previews and enable linting