@@ -85,17 +85,17 @@ spotless {
   }
 }
 
-tasks.withType(Test) {
+tasks.withType(Test).configureEach {
   useJUnitPlatform()
 }
 
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
   options.encoding = 'UTF-8'
   options.incremental = true
   options.release.set(17)
+  options.compilerArgs << '-Xlint:deprecation' << '-Xlint:unchecked' << '-parameters'
   dependsOn 'spotlessApply'
 }
 
-tasks.withType(JavaExec) {
-  jvmArgs += '--enable-preview'
+tasks.withType(JavaExec).configureEach {
 }
